# px4_ros_ws

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/px4_msgs/share/px4_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/px4_powerplant_mission/lib/px4_powerplant_mission/: localization_node  offboard_mission_node  uwb_simulator_node  voxel_mapper_node  yolo_detector_node
log/: latest_build
src/px4_powerplant_mission/: README.md  package.xml  requirements-yolo.txt  setup.cfg  setup.py
src/px4_powerplant_mission/config/: powerplant.yaml
src/px4_powerplant_mission/launch/: gz_sensor_bridge.launch.py  powerplant_system.launch.py  visualization.launch.py
src/px4_powerplant_mission/models/yolo/: data.yaml
src/px4_powerplant_mission/px4_powerplant_mission/: __init__.py
src/px4_powerplant_mission/px4_powerplant_mission/common/: __init__.py  frames.py  qos.py
src/px4_powerplant_mission/px4_powerplant_mission/localization/: __init__.py  fusion.py  uwb.py
src/px4_powerplant_mission/px4_powerplant_mission/mapping/: __init__.py  voxel_grid.py
src/px4_powerplant_mission/px4_powerplant_mission/nodes/: __init__.py  external_vision_bridge_node.py  localization_node.py  offboard_mission_node.py  uwb_simulator_node.py  voxel_mapper_node.py  yolo_detector_node.py
src/px4_powerplant_mission/px4_powerplant_mission/path_planning/: __init__.py  grid_astar.py
src/px4_powerplant_mission/rviz/: powerplant_visualization.rviz
src/px4_powerplant_mission/test/: test_core_math.py
(+3984 files in other folders)
